--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GameGuru</string>
+    <string name="home_screen">Home Screen</string>
+    <string name="search_screen">Search Screen</string>
+    <string name="bookmarks_screen">Bookmarks Screen</string>
 </resources>
