feat: DetailsGamePage of games

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home_screen">HomeScreen</string>
     <string name="search_screen">SearchScreen</string>
     <string name="bookmarks_screen">BookmarksScreen</string>
+    <string name="details_screen">DetailsScreen</string>
 </resources>
